--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 
+html {
+    background-color: black;
+}
+
 h1,h2,h3,h4,p, {
     color: white;
 }
@@ -14,13 +18,47 @@ td  {
     background-color: red;
     border-color: black;
     border-width: 10px;
-}
-
-td {
     width: 50px;
     height: 50px;
 }
 
-html {
-    background-color: black;
+/* dropdown */
+
+.dropbtn {
+  background-color: #3498DB;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
 }
+
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #2980B9;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {background-color: #ddd;}
+
+.show {display: block;}
