--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
+@import 'https://fonts.googleapis.com/css?family=Noto+Sans+HK:700';
 
 html {
     background-color: black;
+    color: white;
 }
 
 h1,h2,h3,h4,p, {
@@ -22,19 +24,28 @@ td  {
     height: 50px;
 }
 
+.insertRow, .deleteRow, .insertCol, .deleteCol {
+	background-color: white;
+	border: none;
+	color: black;
+	margin: 10px 0px 0px 0px;
+	width: 20px;
+	height: 17px;
+}
+
 /* dropdown */
 
-.dropbtn {
-  background-color: #3498DB;
-  color: white;
-  padding: 16px;
+.dropdownButton {
+  background-color: white;
+  color: black;
   font-size: 16px;
+  margin: 10px 0px 0px 0px;
   border: none;
   cursor: pointer;
 }
 
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
+.dropdownButton:hover, .dropdownButton:focus {
+  background-color: aqua;
 }
 
 .dropdown {
@@ -61,4 +72,6 @@ td  {
 
 .dropdown a:hover {background-color: #ddd;}
 
-.show {display: block;}
+.show {
+	display: block;
+}
